<resources>
    <string name="app_name">EasyCheck-Teacher</string>
    <string name="easycheck">EasyCheck</string>
    <string name="Enter_Your_Name">Enter Your Name</string>
    <string name="register_email_hint">Enter Your Email</string>
    <string name="Enter_Mobile_No">Enter Mobile No</string>
    <string name="Enter_password">Enter Password</string>
    <string name="login_with_id_password">Login With Id Password</string>
    <string name="use_another_method">Use Another Method</string>
    <string name="don_t_have_account_nregister_here">Don\'t Have Account ?\nRegister Here</string>
    <string name="Enter_Otp">Enter Otp</string>
    <string name="etEmailMobileRoll">Enter Email/Mobile No</string>
    <string name="effortless_attendance_n_more_time__education">Effortless Attendance\nMore Time\nMore Education</string>
    <string name="Welcome_To">Welcome To</string>
</resources>