<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".Registration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/Here"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/lato_bold"
                    android:text="Here's \nyour first\nstep with \n\n\n"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/textview2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/Here"
                    android:layout_marginBottom="-24dp"
                    android:fontFamily=""
                    android:text="@string/easycheck"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:fontFamily="@font/emblema_one" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_login_hero" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="Create Account\n-------------------"
                        android:textColor="@color/black"
                        android:textStyle="bold" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputFirst"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        app:boxStrokeColor="@color/text_color"
                        app:hintTextColor="@color/text_color"
                        >

                        <EditText
                            android:id="@+id/etName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Enter_Your_Name"
                            android:inputType="textPersonName"
                            android:maxLines="1">

                        </EditText>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        app:boxStrokeColor="@color/text_color"
                        app:hintTextColor="@color/text_color">

                        <EditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/register_email_hint"
                            android:inputType="textPersonName"
                            android:maxLines="1">

                        </EditText>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        app:boxStrokeColor="@color/text_color"
                        app:hintTextColor="@color/text_color">

                        <EditText
                            android:id="@+id/mobileNo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Enter_Mobile_No"
                            android:inputType="number"
                            android:maxLines="1">

                        </EditText>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        app:boxStrokeColor="@color/text_color"
                        app:boxStrokeWidth="2dp"
                        app:boxStrokeWidthFocused="2dp"
                        app:hintTextColor="@color/text_color">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingTop="15dp"
                            android:text="Select Course :"
                            android:textStyle="bold" />

                        <Spinner
                            android:id="@+id/courseSpinner"
                            android:layout_width="match_parent"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:layout_height="40dp"
                            android:layout_marginLeft="100dp"
                            android:layout_marginTop="-30dp"
                            android:padding="10dp"
                            tools:ignore="TouchTargetSizeCheck">

                        </Spinner>


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        app:boxStrokeColor="@color/text_color"
                        app:hintTextColor="@color/text_color">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Enter_password"
                            android:inputType="textPassword"
                            android:maxLines="1">

                        </EditText>

                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/registerButton"
                        style="@style/loginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Register"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onLogin"
                        android:padding="10dp"
                        android:text="Already Have Account"
                        android:textAlignment="center"
                        android:textColor="@color/text_color"
                        android:textSize="16sp"
                        android:textStyle="bold">

                    </TextView>


                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>